Ajout Last Connection + CSS

--- a/app/views/auth/signup.twig
+++ b/app/views/auth/signup.twig
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                             <div class="text-right">
-                                <button type="submit" class="btn btn-default align-right">Enregistrer</button>
+                                <button type="submit" class="btn btn-primary align-right">Enregistrer</button>
                             </div>
 
                             {{ csrf.field | raw }}
