--- a/app/views/auth/signin.twig
+++ b/app/views/auth/signin.twig
@@ -31,7 +31,7 @@
                                 </div>
                             </div>
                             <div class="text-right">
-                                <button type="submit" class="btn btn-default">Valider</button>
+                                <button type="submit" class="btn btn-primary">Valider</button>
                             </div>
                             {{ csrf.field | raw }}
                         </form>
